vendor/cargo/inherent-1.0.11/tests/ui/associated-type.rs
use inherent::inherent;

pub trait Trait {
    type Assoc;
    fn f() -> Self::Assoc;
}

pub struct Struct;

#[inherent]
impl Trait for Struct {
    type Assoc = ();

    // TODO: https://github.com/dtolnay/inherent/issues/15
    fn f() -> Self::Assoc {}
}

fn main() {}
